--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,21 @@ input, select, textarea {
 	appearance: none;
 }
 
+.iframe-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+}
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /* Basic */
 
 	@-ms-viewport {
